resetting to basic
completed the exercise without having the repository loaded in resetting to show the proper commits and comments.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,1 @@
-/*Color palette choices #145889 #397fe7 #535d72 */
-:root {
-    --primary-color: #145889;
-    --secondary-color: #397fe7;
-    --dark-grey: #535d72;
-  }
+1
