--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,80 @@
     color: black;
     border: 2px solid #4caf50;
   }
+
+  #modal-container {
+    display: none;
+    }
+
+    #modal-container.is-visible {
+      align-items: center;
+      justify-content: center;
+      position: fixed;
+      padding: 8px 32px;
+      box-sizing: border-box;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%; 
+      background: rgba(0, 0, 0, 0.5);
+      
+      /* to show it above other content */
+      z-index: 999; 
+      
+      /* to allow scrolling if the screen is not high enough*/
+      overflow: auto; 
+      
+      /* this is used to center the modal */
+      display: grid;
+      text-align: center;
+  }
+    
+  .modal {
+      margin: auto;
+      display: inline-block;
+      box-sizing: border-box;
+      background: #fff;
+      padding: 20px;
+      width: 100%;
+      max-width: 700px;
+      text-align: center;
+      border-radius: 10px;
+  }
+    
+  .modal-close {
+      text-align: right;
+      float: right;
+      background: none;
+      color: rgb(0, 0, 0);
+      border-radius: 20%;
+      margin: 0;
+      text-decoration: double;
+  }
+  
+  .modal-close:hover {
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);;
+  }
+    
+  .modal h1 {
+      margin-top: 0;
+      text-transform: capitalize;
+  }
+    
+  .modal p {
+      margin-bottom: 0;
+      padding: 5px;
+  }
+  
+  body {
+      text-align: center;
+  }
+  
+  ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+  }
+
+  .sprite {
+    padding: 10px;
+}
