--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,12 @@
 body {
     text-align: center;
     min-width: 465;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .form-control {
-    max-width: 500px;
+    max-width: 100%;
     border-color: black;
     height: auto;
     width: auto;
@@ -16,7 +18,6 @@ body {
 .custom-button {
     background: none;
     border: none;
-    max-width: 100%;
     flex-shrink: 1;
     flex-grow: 1;
   }
@@ -24,11 +25,12 @@ body {
   .button-container {
     display: flex;
     justify-content: center;
+    flex-shrink: 1;
   }
   
-  @media (max-width: 767px) {
+  @media (max-width: 500px) {
     .custom-button {
-      width: 100px;
+      width: 1px;
     }
   }
   #previous-button,
