--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,19 +1,14 @@
 /* Body styles */
 body {
   text-align: center;
-  min-width: 465px; /* Added unit(px) to min-width value */
-  margin-left: 35px;
-  margin-right: 20px;
+  margin: auto;
+  min-width: 375px;
 }
 
 /* Form control styles */
 .form-control {
   max-width: 100%;
   border-color: black;
-  height: auto;
-  width: auto;
-  margin: 0; /* Changed 'none' to '0' for margin */
-  display: inline;
 }
 
 /* Pokeball button styles */
@@ -32,11 +27,8 @@ body {
   flex-shrink: 1;
   flex-grow: 0;
   background-color: transparent;
-  border: none;
   outline: none;
   box-shadow: none;
-  height: auto;
-  width: auto;
   margin: auto;
   max-width: 100%;
 }
@@ -46,6 +38,7 @@ body {
   display: flex;
   justify-content: center;
   flex-shrink: 1;
+  min-width: 375px;
 }
 
 /* Media query for responsive styles */
@@ -55,10 +48,7 @@ body {
     border: none;
     outline: none;
     box-shadow: none;
-    height: auto;
-    width: auto;
-    margin-left: 35px;
-    margin-right: 20px;
+    margin: auto;
     max-width: 100%;
   }
 
@@ -68,15 +58,13 @@ body {
     margin: auto;
     padding: 0;
     box-shadow: none;
-    min-width: 90px;
+    min-width: 50px;
   }
 }
 
 /* Hover styles for pokeball button and custom button */
-.pokeball-button, .custom-button:hover {
+.pokeball-button:hover, .custom-button:hover {
   background-color: transparent;
-  height: auto;
-  width: auto;
   margin: auto;
 }
 
@@ -84,10 +72,7 @@ body {
 .form-inline {
   max-width: 225px;
   border-color: black;
-  height: auto;
-  width: auto;
   margin: auto;
-  display: inline;
 }
 
 /* Button size styles */
@@ -105,8 +90,6 @@ body {
 /* Header item styles */
 .header__item {
   max-width: 100%;
-  height: auto;
-  width: auto;
 }
 
 /* Heading styles */
